--- a/About/Changelog.txt
+++ b/About/Changelog.txt
@@ -1,5 +1,8 @@
 # Changelog for Centaurs
 
+1.0.10.0 - Wounds and bionics should now be at the correct place
+
+
 1.0.9.0 - Republish since the HAR framework changed how hair and beards are coded
 
 
